侧滑菜单对主页面跳转不起作用的改修

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"@platforms": ["android", "iPhone", "iPad"],
-	"id": "H5B5685F2",/*必选，应用的标识*/
-	"name": "test",/*必选，应用名称*/
+	"id": "H50099161",/*必选，应用的标识*/
+	"name": "Myapp",/*必选，应用名称*/
 	"version": {
 		"name": "1.0",/*必选，版本名称*/
 		"code": ""
@@ -11,7 +11,7 @@
 		"72": "icon.png"
 	},
 	"fullscreen":true,
-	"launch_path": "index.html",/*必选，应用的入口页面，默认为根目录下的index.html；也可以是网络地址，网络地址必须以http://或https://开头*/
+	"launch_path": "app/index.html",/*必选，应用的入口页面，默认为根目录下的index.html；也可以是网络地址，网络地址必须以http://或https://开头*/
 	"developer": {
 		"email": "",/*可选，开发者名称*/
 		"name": "",/*可选，开发者邮箱地址*/
@@ -62,18 +62,9 @@
 		},
 		"Payment":{},
 		"Uploader": {},
-		"Share":{},
-		"NativeObj": {},
-		"Invocation":{}
+		"Share":{}
 	},
 	"plus": {
-		"launchwebview": {
-            "navigationbar": {
-               "backgroundcolor": "#f7f7f7",
-               "titletext": "首页",
-               "titlecolor": "#000000"
-            }
-        },
 		"popGesture": "close",/*设置应用默认侧滑返回关闭Webview窗口，none为无侧滑返回功能，hide为侧滑隐藏Webview窗口。参考ask.dcloud.net.cn/article/102*/
 		"splashscreen": {
 			"autoclose": false,/*如果为true，程序启动的图片可以自动关闭，如果为false，开发者需要手动关闭*/
@@ -84,7 +75,7 @@
 		"distribute": {
 			"debug": "",/*可选，是否为debug模式，可取值：true表示debug模式运行，false表示release模式运行，默认值为false*/
 			"apple": {
-				"appid": "",/*iOS必选，苹果开发网站申请的appid，如io.dcloud.HelloMUI*/
+				"appid": "",/*iOS必选，苹果开发网站申请的appid，如com.dheaven.hbuilder*/
 				"mobileprovision": "",/*iOS必选，打包配置文件*/
 				"password": "",/*iOS必选，导入配置文件密码*/
 				"p12": "",/*iOS必选，打包配置文件关联的个人证书*/
@@ -92,7 +83,7 @@
 				"frameworks":[]/*用户在调用 Native.js 或开发第三方插件时使用到的 FrameWork 名*/
 			},
 			"google": {
-				"packagename": "",/*Android必选，程序包名，如io.dcloud.HelloMUI*/
+				"packagename": "",/*Android必选，程序包名，如com.dheaven.hbuilder*/
 				"keystore": "",/*Android必选，打包证书文件*/
 				"password": "",/*Android必选，打包证书密码*/
 				"aliasname": "",/*Android必选，打包证书别名*/
@@ -171,10 +162,12 @@
 					"fonts/mui.ttf",
 					"css/mui.min.css",
 					"js/update.js",
-					"list.html"
+					"list.html",
+					"main.html"
 				],
 				"refer": [
-					"index-menu.html"
+					"index-menu.html",
+					"user.html"
 				],
 				"priority": 0
 			},
@@ -204,14 +197,18 @@
 				"resources": [
 					"js/mui.min.js",
 					"fonts/mui.ttf",
-					"css/mui.min.css"
+					"css/mui.min.css",
+					"examples/ajax.html",
+					"examples/accordion.html",
+					"images/cbd.jpg",
+					"images/yuantiao.jpg",
+					"images/muwu.jpg",
+					"images/shuijiao.jpg"
 				],
 				"refer": [
 					"examples/template.html",
 					"examples/tab-webview-main.html",
 					"examples/pullrefresh_main.html",
-					"examples/ajax.html",
-					"examples/accordion.html",
 					"examples/buttons.html",
 					"examples/guide.html",
 					"examples/badges.html",
@@ -270,7 +267,14 @@
 					"examples/tableviews-with-swipe.html",
 					"examples/media-list.html",
 					"examples/nav.html",
-					"examples/numbox.html"
+					"examples/numbox.html",
+					"examples/card.html",
+					"examples/progressbar.html",
+					"detail.html",
+					"template.html",
+					"pullrefresh_main.html",
+					"tab-webview-main.html",
+					"exhibit.html"
 				],
 				"priority": 0
 			},
@@ -913,7 +917,8 @@
 					"js/mui.min.js",
 					"css/app.css",
 					"css/mui.min.css",
-					"images/qrcode.png"
+					"images/qrcode.png",
+					"fonts/mui.ttf"
 				],
 				"refer": [],
 				"priority": 0
@@ -1015,6 +1020,224 @@
 					"css/app.css",
 					"css/mui.min.css",
 					"js/mui.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"examples/card.html": {
+				"resources": [
+					"images/logo.png"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"detail.html": {
+				"resources": [
+					"fonts/mui.ttf",
+					"css/mui.min.css",
+					"css/app.css",
+					"js/mui.min.js",
+					"images/cbd.jpg",
+					"images/yuantiao.jpg",
+					"images/muwu.jpg",
+					"images/shuijiao.jpg"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"pullrefresh_main.html": {
+				"resources": [
+					"pullrefresh_sub.html"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"request.html": {
+				"resources": [
+					"images/cbd.jpg",
+					"images/muwu.jpg",
+					"images/yuantiao.jpg",
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css",
+					"images/shuijiao.jpg"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"exhibit.html": {
+				"resources": [
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css",
+					"images/shuijiao.jpg"
+				],
+				"refer": [
+					"request.html",
+					"chatView.html"
+				],
+				"priority": 0
+			},
+			"chatView.html": {
+				"resources": [
+					"js/mui.imageViewer.js",
+					"images/logo.png",
+					"css/mui.imageviewer.css",
+					"js/arttmpl.js",
+					"css/app.css",
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"main.html": {
+				"resources": [
+					"images/cbd.jpg",
+					"images/yuantiao.jpg",
+					"images/muwu.jpg",
+					"images/shuijiao.jpg"
+				],
+				"refer": [
+					"examples/info.html",
+					"request.html",
+					"tab-webview-main.html",
+					"exhibit.html",
+					"chatView.html",
+					"template.html",
+					"user.html"
+				],
+				"priority": 0
+			},
+			"user.html": {
+				"resources": [
+					"images/cbd.jpg",
+					"images/muwu.jpg",
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css"
+				],
+				"refer": [
+					"setting.html"
+				],
+				"priority": 0
+			},
+			"setting.html": {
+				"resources": [
+					"css/feedback.css",
+					"js/feedback.js",
+					"js/mui.view.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"app/index.html": {
+				"resources": [
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css",
+					"js/update.js",
+					"app/main.html"
+				],
+				"refer": [
+					"app/index-menu.html",
+					"app/user.html"
+				],
+				"priority": 0
+			},
+			"app/main.html": {
+				"resources": [
+					"images/cbd.jpg",
+					"images/yuantiao.jpg",
+					"images/muwu.jpg",
+					"images/shuijiao.jpg"
+				],
+				"refer": [
+					"app/tab-webview-main.html",
+					"app/template.html",
+					"app/detail.html",
+					"app/exhibit.html",
+					"app/chatView.html"
+				],
+				"priority": 0
+			},
+			"app/detail.html": {
+				"resources": [
+					"css/app.css",
+					"images/cbd.jpg",
+					"images/yuantiao.jpg",
+					"images/muwu.jpg",
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css",
+					"images/shuijiao.jpg"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"app/user.html": {
+				"resources": [
+					"images/cbd.jpg",
+					"images/muwu.jpg",
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css"
+				],
+				"refer": [
+					"app/setting.html"
+				],
+				"priority": 0
+			},
+			"app/exhibit.html": {
+				"resources": [
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css",
+					"images/shuijiao.jpg"
+				],
+				"refer": [
+					"app/request.html",
+					"app/chatView.html"
+				],
+				"priority": 0
+			},
+			"app/request.html": {
+				"resources": [
+					"images/cbd.jpg",
+					"images/muwu.jpg",
+					"images/yuantiao.jpg"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"app/setting.html": {
+				"resources": [
+					"css/feedback.css",
+					"js/feedback.js",
+					"js/mui.view.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"app/chatView.html": {
+				"resources": [
+					"js/mui.imageViewer.js",
+					"css/app.css",
+					"css/mui.imageviewer.css",
+					"js/arttmpl.js",
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"app/template.html": {
+				"resources": [
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css"
 				],
 				"refer": [],
 				"priority": 0
