--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
 		"72": "icon.png"
 	},
 	"fullscreen":true,
-	"launch_path": "app/main.html",/*必选，应用的入口页面，默认为根目录下的index.html；也可以是网络地址，网络地址必须以http://或https://开头*/
+	"launch_path": "app/index.html",/*必选，应用的入口页面，默认为根目录下的index.html；也可以是网络地址，网络地址必须以http://或https://开头*/
 	"developer": {
 		"email": "",/*可选，开发者名称*/
 		"name": "",/*可选，开发者邮箱地址*/
@@ -1153,12 +1153,15 @@
 					"images/cbd.jpg",
 					"images/yuantiao.jpg",
 					"images/muwu.jpg",
-					"images/shuijiao.jpg"
+					"images/shuijiao.jpg",
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css",
+					"app/detail.html"
 				],
 				"refer": [
 					"app/tab-webview-main.html",
 					"app/template.html",
-					"app/detail.html",
 					"app/exhibit.html",
 					"app/chatView.html"
 				],
@@ -1173,7 +1176,11 @@
 					"js/mui.min.js",
 					"fonts/mui.ttf",
 					"css/mui.min.css",
-					"images/shuijiao.jpg"
+					"images/shuijiao.jpg",
+					"images/goodbefor.png",
+					"images/goodafter.png",
+					"app/main.html",
+					"css/icons-extra.css"
 				],
 				"refer": [],
 				"priority": 0
@@ -1196,7 +1203,8 @@
 					"js/mui.min.js",
 					"fonts/mui.ttf",
 					"css/mui.min.css",
-					"images/shuijiao.jpg"
+					"images/shuijiao.jpg",
+					"images/logo.png"
 				],
 				"refer": [
 					"app/request.html",
